--- a/css/ocpstyles.css
+++ b/css/ocpstyles.css
@@ -5,6 +5,8 @@
     src: url('fonts/fontomas-webfont.eot?#iefix') format('embedded-opentype'),
          url('fonts/fontomas-webfont.woff') format('woff'),
          url('fonts/fontomas-webfont.ttf') format('truetype'),
+         url('fonts/fontomas-webfont.svg#FontomasCustomRegular') format('svg');
+
     font-weight: normal;
     font-style: normal;
 }
